show map and location marker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Google Maps</string>
+    <string name="API_KEY">AIzaSyC4jicd4R9vY7ScfnFTFHKEAi04GkmYM9w</string>
 </resources>
